finish all action

--- a/TruckSaleWebApp/TruckSaleWebApp.csproj
+++ b/TruckSaleWebApp/TruckSaleWebApp.csproj
@@ -188,8 +188,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Content\css\" />
-    <Folder Include="Content\fonts\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -201,6 +199,7 @@
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminProductController.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminResourceController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AdminUserController.cs" />
     <Compile Include="Areas\HelpPage\ApiDescriptionExtensions.cs" />
     <Compile Include="Areas\HelpPage\App_Start\HelpPageConfig.cs" />
     <Compile Include="Areas\HelpPage\Controllers\HelpController.cs" />
@@ -234,6 +233,7 @@
     <Compile Include="Bean\ProductResourceBean.cs" />
     <Compile Include="Bean\ProductShortInfoBean.cs" />
     <Compile Include="Bean\ProductGroupBean.cs" />
+    <Compile Include="Bean\UserBean.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManufactureController.cs" />
@@ -244,10 +244,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Bean\PricingBean.cs" />
+    <Compile Include="Models\DatabaseInitialize.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductGroup.cs" />
     <Compile Include="Models\ProductResource.cs" />
     <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\RoleType.cs" />
     <Compile Include="Models\TrucSaleDb.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -259,10 +261,14 @@
     <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Repository\ProductResouceRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
+    <Compile Include="Service\ApiUserAuthorize.cs" />
     <Compile Include="Service\IProductService.cs" />
+    <Compile Include="Service\IUserService.cs" />
     <Compile Include="Service\ProductService.cs" />
     <Compile Include="Service\UserAuthorize.cs" />
+    <Compile Include="Service\UserService.cs" />
     <Compile Include="Utils\BeanUtil.cs" />
+    <Compile Include="Utils\Contents.cs" />
     <Compile Include="Utils\FileHelper.cs" />
     <Compile Include="Utils\PasswordHelper.cs" />
     <Compile Include="Utils\Utilities.cs" />
@@ -271,6 +277,15 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\animations.min.css" />
+    <Content Include="Content\css\bootstrap.css" />
+    <Content Include="Content\css\font-awesome.css" />
+    <Content Include="Content\css\ionicons.css" />
+    <Content Include="Content\css\sb-admin.css" />
+    <Content Include="Content\css\style-white.css" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\fonts\ionicons.svg" />
     <Content Include="Content\img\1.jpg" />
     <Content Include="Content\img\11.jpg" />
     <Content Include="Content\img\2.jpg" />
@@ -280,7 +295,20 @@
     <Content Include="Content\img\5.jpg" />
     <Content Include="Content\img\6.jpg" />
     <Content Include="Content\img\bg.jpg" />
+    <Content Include="Content\img\logo\dongfeng.png" />
+    <Content Include="Content\img\logo\hino.png" />
+    <Content Include="Content\img\logo\huyndai.png" />
+    <Content Include="Content\img\logo\icon.png" />
+    <Content Include="Content\img\logo\isuzu.png" />
+    <Content Include="Content\img\logo\logo.png" />
+    <Content Include="Content\img\logo\misubishi.png" />
+    <Content Include="Content\img\logo\suzuki.png" />
+    <Content Include="Content\img\logo\veam.png" />
     <Content Include="Content\img\mb-bg.jpg" />
+    <Content Include="Content\img\portfolio\1.jpg" />
+    <Content Include="Content\img\portfolio\2.jpg" />
+    <Content Include="Content\img\portfolio\3.jpg" />
+    <Content Include="Content\img\products\truckdefault.jpg" />
     <Content Include="Content\js\animations.min.js" />
     <Content Include="Content\js\appear.min.js" />
     <Content Include="Content\js\bootstrap.js" />
@@ -292,6 +320,39 @@
     <Content Include="Content\js\jquery.isotope.js" />
     <Content Include="Content\js\jquery.priceformat.min.js" />
     <Content Include="Content\js\jquery.validate.min.js" />
+    <Content Include="Content\js\source\blank.gif" />
+    <Content Include="Content\js\source\fancybox_loading%402x.gif" />
+    <Content Include="Content\js\source\fancybox_loading.gif" />
+    <Content Include="Content\js\source\fancybox_overlay.png" />
+    <Content Include="Content\js\source\fancybox_sprite%402x.png" />
+    <Content Include="Content\js\source\fancybox_sprite.png" />
+    <Content Include="Content\js\source\helpers\fancybox_buttons.png" />
+    <Content Include="Content\js\source\helpers\jquery.fancybox-buttons.css" />
+    <Content Include="Content\js\source\helpers\jquery.fancybox-buttons.js" />
+    <Content Include="Content\js\source\helpers\jquery.fancybox-media.js" />
+    <Content Include="Content\js\source\helpers\jquery.fancybox-thumbs.css" />
+    <Content Include="Content\js\source\helpers\jquery.fancybox-thumbs.js" />
+    <Content Include="Content\js\source\jquery.fancybox.css" />
+    <Content Include="Content\js\source\jquery.fancybox.js" />
+    <Content Include="Content\js\source\jquery.fancybox.pack.js" />
+    <Content Include="Content\js\vegas\images\loading.html" />
+    <Content Include="Content\js\vegas\jquery.vegas.min.css" />
+    <Content Include="Content\js\vegas\jquery.vegas.min.js" />
+    <Content Include="Content\js\vegas\overlays\01.png" />
+    <Content Include="Content\js\vegas\overlays\02.png" />
+    <Content Include="Content\js\vegas\overlays\03.png" />
+    <Content Include="Content\js\vegas\overlays\04.png" />
+    <Content Include="Content\js\vegas\overlays\05.png" />
+    <Content Include="Content\js\vegas\overlays\06.png" />
+    <Content Include="Content\js\vegas\overlays\07.png" />
+    <Content Include="Content\js\vegas\overlays\08.png" />
+    <Content Include="Content\js\vegas\overlays\09.png" />
+    <Content Include="Content\js\vegas\overlays\10.png" />
+    <Content Include="Content\js\vegas\overlays\11.png" />
+    <Content Include="Content\js\vegas\overlays\12.png" />
+    <Content Include="Content\js\vegas\overlays\13.png" />
+    <Content Include="Content\js\vegas\overlays\14.png" />
+    <Content Include="Content\js\vegas\overlays\15.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -330,6 +391,20 @@
     <Content Include="Areas\Admin\Views\AdminHome\Login.cshtml" />
     <Content Include="Areas\Admin\Views\AdminHome\Product.cshtml" />
     <Content Include="Areas\Admin\Views\AdminHome\Products.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminHome\ChangePassword.cshtml" />
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Content\fonts\ionicons.eot" />
+    <Content Include="Content\fonts\ionicons.ttf" />
+    <Content Include="Content\fonts\ionicons.woff" />
+    <None Include="Properties\PublishProfiles\TruckSale.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
